rns-lang/tests/snapshots/diagnostic/err-lexer-directives-dot_public.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.public static HelloWorl
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/diagnostic/err/lexer/directives/dot_public.ja:1:1 ]
   │
 1 │ .public static HelloWorl
   │ ───┬───  
   │    ╰───── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
