rns-lang/tests/snapshots/diagnostic/err-lexer-directives-dot_semicolon.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
    .;comment after semicolon
.end
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/diagnostic/err/lexer/directives/dot_semicolon.ja:2:5 ]
   │
 2 │     .;comment after semicolon
   │     ────┬────  
   │         ╰────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
