rns-lang/tests/snapshots/diagnostic/err-lexer-directives-dot_static.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class
.static
.method
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/diagnostic/err/lexer/directives/dot_static.ja:2:1 ]
   │
 2 │ .static
   │ ───┬───  
   │    ╰───── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
